universal-verifier-back/k8s/k8s-pro.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universal-verifier-back-deployment
  labels:
    app: universal-verifier-back
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: universal-verifier-back
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: universal-verifier-back
    spec:
      imagePullSecrets:
        - name: pull-acr-kosovo
      serviceAccountName: apps-vidchain
      containers:
        - image: k8scrvidchainstaging.azurecr.io/kosovo/universal-verifier-back:latest
          imagePullPolicy: 'Always'
          name: universal-verifier-back
          ports:
            - containerPort: 3001
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: universal-verifier-back-service
  labels:
    app: universal-verifier-back
spec:
  type: ClusterIP
  ports:
    - name: '8070'
      port: 8070
      targetPort: 3001
  selector:
    app: universal-verifier-back
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: universal-verifier-back-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.eid.kren-ks.eu
      secretName: certificate-pre
  rules:
    - host: api.eid.kren-ks.eu
      http:
        paths:
          - path: /universal-verifier/api
            pathType: Prefix
            backend:
              service:
                name: universal-verifier-back-service
                port:
                  number: 8070
